# Oliana

./: .gitignore  Cargo.toml  build.py  contributors.txt  readme.md  tests.md
Graphics/: PenPaperIcon.xcf
OLD/Original_Rust_Code/: Cargo.toml
OLD/Original_Rust_Code/src/: main.rs
OLD/Original_Rust_Code/src/ai/: mod.rs
OLD/Original_Rust_Code/src/cli/: mod.rs
OLD/Original_Rust_Code/src/gui/: mod.rs
OLD/Original_Rust_Code/src/utils/: mod.rs
Oliana-CLI/: Cargo.toml
Oliana-CLI/src/: main.rs
Oliana-GUI/: Cargo.toml
Oliana-GUI/src/: gui_oneshot_tasks.rs  gui_painters.rs  gui_setup.rs  gui_structs.rs  gui_updaters.rs  main.rs  structs.rs
Oliana-Images/: Cargo.toml  build.rs
Oliana-Images/src/: main.rs
Oliana-Lib/: Cargo.toml
Oliana-Lib/src/: build_meta.rs  err.rs  files.rs  launchers.rs  lib.rs  misc.rs
Oliana-Server/: Cargo.toml
Oliana-Server/src/: oliana_client.rs  oliana_server.rs  oliana_server_lib.rs
Oliana-Text/: Cargo.toml
Oliana-Text/src/: main.rs
ai-tool-data/: ForestGenerator.smproj  StitchLogoGenerator.smproj
cloud/: oliana-server.service  opi-setup-notes.md  remote-to-opi.py  remote-to-stitch.py  stitch-blink-status.py  stitch-blink-status.service  stitch-setup-notes.md
cloud-infra-access/: opi-setup-notes.md  remote-to-opi.py
docs/: index.html  style.css
runscripts/: jeff.sh  stitch.sh  test-server-text-and-image-gen.sh
src/: main.rs  utils.rs
src/ai/: mod.rs
src/cli/: structs.rs
src/gui/: mod.rs
src/utils/: mod.rs  old.rs
utils/: lookup_torch_libraries.py  oneshot-convert-hf-model-to-onnx.py
