[package]
name = "oliana_gui"
version = "0.1.0"
edition = "2021"

[features]
default = []
wayland = ["bevy/wayland"]

[dependencies]
oliana_lib = { path = "../Oliana-Lib" }
oliana_server = { path = "../Oliana-Server" }

tokio =        { version = "1.41", features = ["full"] }
num_cpus =     { version = "1.16" }
serde =        { version = "1", features = ["derive"] }
clap =         { version = "4", features = ["derive"] }
rand =         { version = "0.8"  }
rand_core =    { version = "0.6"  }

bevy_simple_text_input = { version = "0.10" }
bevy_ecs =     { version = "0.15" }
bevy_text =    { version = "0.15" }
bevy_defer =   { version = "0.13" }
bevy_simple_scroll_view = { version = "0.3" }

lazy_static =  { version = "1" }
sysinfo =      { version = "0.33" }

tarpc =        { version = "0.35", features = ["tokio1", "tokio1", "tcp", "serde-transport", "serde-transport-bincode"] }
serde_json =   { version = "1" }

async-std =    { version = "1.13" }
deunicode =    { version = "1.6" }

# This block specified dependencies ONLY compiled in on linux; we want wayland support, older DEs can miss out on cool new tech.
[target.'cfg(target_os = "linux")'.dependencies]
bevy =       { version = "0.15" } # TODO investigate supporting X11 + Wayland at SAME TIME

# This block specified dependencies ONLY compiled in on macos
[target.'cfg(target_os = "macos")'.dependencies]
# Graphics dependencies
bevy =       { version = "0.15", features = [ ] }

# This block specified dependencies ONLY compiled in on windows
[target.'cfg(windows)'.dependencies]
# Graphics dependencies
bevy =       { version = "0.15", features = [ ] }
