[package]
name = "oliana_images"
version = "0.1.0"
edition = "2021"


[dependencies]
oliana_lib = { path = "../Oliana-Lib" }
tokio =        { version = "1.41", features = ["full"] }
num_cpus =     { version = "1.16" }
walkdir =      { version = "2" }


[dependencies.pyo3]
version = "0.23.3"
features = ["auto-initialize", "abi3", "abi3-py39", "generate-import-lib"]


