[package]
name = "oliana_text"
version = "0.1.0"
edition = "2021"

[features]
default = ["cuda"]
cuda = ["mistralrs/cuda", "mistralrs/cudnn"]

[dependencies]
oliana_lib = { path = "../Oliana-Lib" }
tokio =        { version = "1.41", features = ["full"] }
num_cpus =     { version = "1.16" }

#mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git", rev = "v0.3.4", features = ["cuda"] }
# Note: This thing is _ACTIVELY_ developed; at time of writing master is only 2 hours old!
#mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git", features = ["cuda","cudnn"] }
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git" }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1" }


